Aula de JS, com atividades de fixação

--- a/atividadeDeFixacao/acessoemail.html
+++ b/atividadeDeFixacao/acessoemail.html
@@ -1,13 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body>
     <script>
         
+        let login = prompt("Digite o login:");
+        let senha = prompt("Digite a senha:");
+
+        if (login === senha) {
+            alert("Acesso permitido!");
+        } else {
+            alert("Acesso negado! O login e a senha precisam ser idênticos.");
+        }
     </script>
 </body>
+
 </html>
